# end-to-end-tests

./: .gitignore  CMakeLists.txt  README.md  helper.txt  requirements.txt  requirements_linux.txt
received/: telemetry.csv
scripts/: cansat_pipeline.py  cansat_pipeline_integrated_led.py  cansat_pipeline_sensors.py  receive.py  receive_telemetry.py  run_pipeline.py
src/: __init__.py  protocol.py  sensors.py  transmission.py
src/cpp/: bindings.cpp  pipeline.cpp  pipeline.hpp  processing.cpp  processing.hpp
utils/: cansat_led_pipeline.py  integrated_led_manipulation.py  stream_telemetry.py  test_imports.py  xbee_test_rx.py  xbee_test_tx.py
